# test_project

./: README.md  main.py  pyproject.toml  requirements.txt
agent/: __init__.py  actions.py  config.py  gitlab_client.py  openai_client.py
