[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitlab-openai-agent"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "python-gitlab>=3.10",
    "GitPython>=3.1",
]

[project.scripts]
agent = "main:main"

